FIX: fix blurry

--- a/src/CustomColors/index.css
+++ b/src/CustomColors/index.css
@@ -27,9 +27,12 @@
       width: 18px;
       height: 18px;
       cursor: pointer;
-      border-radius: 2px;
-      border: 1px solid rgba(0, 0, 0, 0.12);
       margin-top: 10px;
+
+      li {
+        border-radius: 2px;
+        border: 1px solid rgba(0, 0, 0, 0.12);
+      }
 
       &:not(:nth-child(9n)) {
         margin-right: 10px;
